update segi tampilan menjadi lebih menarik

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Akshar&family=Amatic+SC:wght@700&family=Montserrat:wght@300;400;600&family=Pacifico&family=Sora:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Akshar&family=Amatic+SC:wght@700&family=Montserrat:wght@300;400;600&family=Pacifico&family=Poppins:wght@200;400;500&family=Sora:wght@600&display=swap"
       rel="stylesheet"
     />
     <!-- my fonts -->
@@ -24,10 +24,14 @@
       <h1 id="judul">TODO-LIST APP</h1>
       <div class="inputan-user">
         <form action="" class="inputan">
-          <input type="text" class="kegiatan" />
+          <input
+            type="text"
+            class="kegiatan"
+            placeholder="masukkan kegiatan anda"
+          />
           <input type="date" class="waktu" />
         </form>
-        <button><a href="#" id="tambahkan">+</a></button>
+        <button id="tambahkan">+</button>
       </div>
       <label for="">daftar kegiatan</label>
       <div id="daftar-kegiatan"></div>
