--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Akshar&family=Amatic+SC:wght@700&family=Montserrat:wght@300;400;600&family=Pacifico&family=Poppins:wght@200;400;500&family=Sora:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Akshar&family=Amatic+SC:wght@700&family=Montserrat:wght@300;400;600&family=Pacifico&family=Poppins:wght@200;400;500;600&family=Sora:wght@600&display=swap"
       rel="stylesheet"
     />
     <!-- my fonts -->
