tambahan search bar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         </form>
         <button id="tambahkan">+</button>
       </div>
+
+      <form action="" class="search-section">
+        <input type="search" class="search" placeholder="cari kegiatan" />
+        <button class="search-button"><i data-feather="search"></i></button>
+      </form>
+
       <label for="">daftar kegiatan</label>
       <div id="daftar-kegiatan"></div>
       <label for="">kegiatan selesai</label>
